Работа над API (7)
