# openapi.yaml
@@ -843,7 +843,7 @@ paths:
             type: integer
       responses:
         201:
-          description: Рецепт соханён
+          description: Рецепт сохранён
     delete:
       tags: [Recipe]
       summary: Отменить сохранение рецепта
@@ -958,7 +958,7 @@ paths:
   /ingredients:
     get:
       tags: [Directory]
-      summary: Получить список игредиентов
+      summary: Получить список ингредиентов
       security:
         - JWTAuth: []
       parameters:
@@ -967,7 +967,7 @@ paths:
         - $ref: '#/components/parameters/SearchParam'
       responses:
         200:
-          description: Список игредиентов
+          description: Список ингредиентов
           content:
             application/json:
               schema:
@@ -1425,7 +1425,7 @@ components:
       example: "Заголовок"
     
     DishTypeIdsParam:
-      name: dish_type_ids
+      name: dishTypeIds
       in: query
       description: ID типов блюд, к которым относится рецепт (достаточно, чтобы рецепт относился хотя бы к одному типу)
       required: false
@@ -1438,7 +1438,7 @@ components:
       example: "1,3,5"
     
     IngredientIdsParam:
-      name: ingredient_ids
+      name: ingredientIds
       in: query
       description: ID ингредиентов, которые должны быть в рецепте (все указанные ингредиенты должны присутствовать)
       required: false
